# api

./: .env.example  .env.test  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Jenkinsfile  Makefile  PRODUCTION_CHECKLIST.md  README.md  check_db_state.py  docker-compose-dev.yaml  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: dd47f6892253_.py
app/: main.py
app/advices/: base_response_handler.py  global_exception_handler.py  responses.py
app/config/: base_repositories.py  settings.py
app/db/: connect_db.py
app/exceptions/: exceptions.py
app/mail/: template_renderer.py
app/mail/service/: resend_service.py
app/mail/templates/html/: password_reset_email.html  verification_email.html  welcome_email.html
app/middlewares/: auth_middleware.py
app/modules/data_service/: manager.py
app/modules/data_service/clients/: base_client.py  delta_client.py
app/modules/data_service/services/: broker.py  streamer.py
app/modules/user_service/models/: session_model.py  user_model.py
app/modules/user_service/repositories/: session_repository.py  user_repository.py
app/modules/user_service/routes/: auth_routes.py  session_routes.py  user_routes.py
app/modules/user_service/schema/: session_schema.py  user_schema.py
app/modules/user_service/services/: auth_service.py  session_service.py  user_service.py
app/modules/user_service/utils/: auth_utils.py
docs/: ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md  README.md
tests/: conftest.py  test_main.py  verify_streamer.py
tests/modules/user_service/: conftest.py
tests/modules/user_service/repositories/: test_session_repository.py  test_user_repository.py
tests/modules/user_service/routes/: conftest.py  test_auth_routes.py  test_session_routes.py  test_user_routes.py
tests/modules/user_service/services/: test_auth_service.py  test_session_service.py  test_user_service.py
